--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Foodsy</string>
-
+    <string name="google_maps_key">AIzaSyBECGSHApRwBMSPrFPlg0TuXaKhMY6k-Pg</string>
     <!-- Module login -->
     <string name="sign_up">ĐĂNG KÝ</string>
     <string name="sign_in">ĐĂNG NHẬP</string>
@@ -8,6 +8,7 @@
     <string name="sign_in_phone">Đăng nhập Số Điện Thoại</string>
     <string name="or">Hoặc</string>
     <string name="register">ĐĂNG KÝ</string>
+    <string name="username">Tên đăng nhập</string>
     <string name="email">Địa chỉ Email</string>
     <string name="password">Mật khẩu</string>
     <string name="confirm_password">Xác nhận mật khẩu</string>
@@ -36,10 +37,29 @@
 
     <!--Home Activity-->
     <string name="title_home">Trang chủ</string>
+    <string name="title_bookmark">Đánh dấu</string>
     <string name="title_search">Tìm kiếm</string>
     <string name="title_notifications">Thông báo</string>
     <string name="title_maps">Địa điểm</string>
     <!--HomeFragment-->
     <string name="name_restaurant">The Coffee House</string>
     <string name="name_food">Coffee Capuchino</string>
+
+    <!-- Update info activity -->
+    <string name="image_avatar">Ảnh đại diện</string>
+    <string name="full_name">Tên đầy đủ</string>
+    <string name="phone">Số điện thoại</string>
+    <string name="address">Địa chỉ</string>
+    <string name="gender">Giới tính</string>
+    <string name="male">Nam</string>
+    <string name="female">Nữ</string>
+    <string name="update_info">Cập nhật</string>
+
+    <!--Search Activity-->
+    <string name="your_loaction">Vị trí hiện tại</string>
+    
+    <!--Place Detail Activity-->
+    <string name="food_menu">FOOD MENU</string>
+    <string name="place_detail">PLACE DETAILS</string>
+    <string name="place_review">PLACE REVIEWS</string>
 </resources>
