--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,10 @@
     <string name="bookmark">Đánh dấu</string>
     <!--Account kit-->
     <string name="FACEBOOK_APP_ID">258079781266199</string>
-    <string name="ACCOUNT_KIT_CLIENT_TOKEN">f4b2Minh60c7fa4fe7d39d027a62785645e0</string>
+    <string name="ACCOUNT_KIT_CLIENT_TOKEN">f4b260c7fa4fe7d39d027a62785645e0</string>
+    <!--Login facebook-->
+    <string name="fb_login_protocol_scheme">fb258079781266199</string>
+   <!--Home Activity-->
     <string name="title_activity_home">HomeActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -57,9 +60,21 @@
 
     <!--Search Activity-->
     <string name="your_loaction">Vị trí hiện tại</string>
-    
+
     <!--Place Detail Activity-->
     <string name="food_menu">FOOD MENU</string>
     <string name="place_detail">PLACE DETAILS</string>
     <string name="place_review">PLACE REVIEWS</string>
+
+    <!--Error-->
+    <string name="error_message_username">Username phải lớn hơn 6 ký tự</string>
+    <string name="error_message_password">Password phải lớn hơn 6 ký tự</string>
+    <string name="error_message_confirmPass">Vui lòng nhập xác nhận mật khẩu</string>
+    <string name="error_message_confirm">Password chưa trùng</string>
+    <string name="error_message_sex">Bạn chưa chọn giới tính</string>
+    <string name="error_message_fullname">Bạn chưa nhập tên</string>
+
+    <!--menu_takepicture-->
+    <string name="choose_image">Chọn ảnh từ máy</string>
+    <string name="take_picture">Chụp ảnh</string>
 </resources>
