--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,11 +39,11 @@
     <string name="action_settings">Settings</string>
 
     <!--Home Activity-->
-    <string name="title_home">Trang chủ</string>
+    <string name="title_home">Địa điểm</string>
     <string name="title_bookmark">Đánh dấu</string>
     <string name="title_search">Tìm kiếm</string>
-    <string name="title_notifications">Thông báo</string>
-    <string name="title_maps">Địa điểm</string>
+    <string name="title_notifications">Sự kiện</string>
+    <string name="title_maps">Quanh đây</string>
     <!--HomeFragment-->
     <string name="name_restaurant">The Coffee House</string>
     <string name="name_food">Coffee Capuchino</string>
